[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "lbtff"
dynamic = ["version"]
authors = [
    {name = "Patrick Erich", email = "git@patrickerich.email"},
]
description = "Line based text file filter"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
    "Topic :: Utilities",
]

[project.scripts]
lbtff = "lbtff.cli:main"

[project.urls]
Home = "https://github.com/patrickerich/lbtff"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if 0:",
  "if __name__ == .__main__.:",
]
fail_under = 100

[tool.coverage.run]
branch = true
source = ["lbtff"]

[tool.flit.sdist]
exclude = ["docs"]

[tool.lbtff.vars]
package_name = "lbtff"
version_cmd = "lbtff --version"
version_index = 1