[bumpversion]
current_version = 0.0.1

[bumpversion:file:lbtff/__init__.py]

[bdist_wheel]
universal = 0

[flake8]
ignore = W503
exclude = .git,__pycache__,.tox,*.egg,build,data,dist,.cache,.env

[metadata]
license_files = LICENSE

# [options.entry_points]
# console_scripts =
#     lbtff = lbtff.cli:main
